--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Description: This mizer extension package collects contributions from the mizer
 License: GPL-3
 Imports:
     assertthat,
+    dplyr,
     mizer (>= 1.0.1.9001),
     plotly
 Suggests:
@@ -20,6 +21,7 @@ Suggests:
     testthat (>= 2.1.0)
 Collate:
     animateSpectra.R
+    help.R
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
