--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,3 +25,5 @@ Collate:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
+URL: https://github.com/sizespectrum/mizerExperimental
+BugReports: https://github.com/sizespectrum/mizerExperimental/issues
