Moved the `displayFrames()` method from core mizer to here while we figure out the best way to make it easy for users to compare results from different simulations.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,15 +12,18 @@ License: GPL-3
 Imports:
     assertthat,
     dplyr,
+    ggplot2,
     mizer (>= 1.0.1.9001),
     plotly
 Suggests:
     pkgdown,
     rmarkdown,
     roxygen2,
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    vdiffr
 Collate:
     animateSpectra.R
+    displayFrames.R
     help.R
 Encoding: UTF-8
 LazyData: true
