Moved `newSheldonParams()` here.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(animateSpectra)
 export(displayFrames)
 export(getBiomassFrame)
 export(getSSBFrame)
+export(newSheldonParams)
 import(dplyr)
 import(ggplot2)
 import(mizer)
