--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Collate:
     animateSpectra.R
     displayFrames.R
     help.R
+    newSheldonParams.R
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
