--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mizerExperimental
 Type: Package
 Title: Extends the mizer package with experimental features
-Version: 0.1.0
+Version: 0.1.1
 Author: Various contributors
 Maintainer: Gustav Delius <gustav.delius@gmail.com>
 Description: This mizer extension package collects contributions from the mizer
@@ -14,7 +14,11 @@ Imports:
     dplyr,
     ggplot2,
     mizer (>= 1.0.1.9001),
-    plotly
+    plotly,
+    shiny,
+    shinyjs,
+    tibble,
+    tidyr
 Suggests:
     pkgdown,
     rmarkdown,
@@ -25,9 +29,11 @@ Collate:
     animateSpectra.R
     displayFrames.R
     help.R
+    manipulateParams.R
     newSheldonParams.R
+    tuneParams.R
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 URL: https://github.com/sizespectrum/mizerExperimental
 BugReports: https://github.com/sizespectrum/mizerExperimental/issues
