--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,11 +9,13 @@ Description: This mizer extension package collects contributions from the mizer
     the community. Once matured, frequently-used features can be moved to the
     core mizer package.
 License: GPL-3
+Depends:
+    R (>= 3.1),
+    mizer (>= 2.0.0)
 Imports:
     assertthat,
     dplyr,
     ggplot2,
-    mizer (>= 1.0.1.9001),
     plotly,
     shiny,
     shinyjs,
