--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mizerExperimental
 Type: Package
 Title: Extends the mizer package with experimental features
-Version: 0.1.1
+Version: 0.1.1.9001
 Author: Various contributors
 Maintainer: Gustav Delius <gustav.delius@gmail.com>
 Description: This mizer extension package collects contributions from the mizer
@@ -16,6 +16,7 @@ Imports:
     assertthat,
     dplyr,
     ggplot2,
+    methods,
     plotly,
     shiny,
     shinyjs,
