--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,8 @@ export(updateInitialValues)
 import(assertthat)
 import(dplyr)
 import(ggplot2)
+import(methods)
 import(mizer)
 import(plotly, except = last_plot)
 import(shiny)
-importFrom(reshape2,melt)
+importFrom(stats,runif)
