Added `getYieldVsFcurve()` contributed by Ken Andersen. Moved here from core mizer while the function is being developed. Updated website.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Collate:
     manipulateParams.R
     newSheldonParams.R
     tuneParams.R
+    getYieldVsFcurve.R
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
