--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(animateSpectra)
 export(displayFrames)
 export(getBiomassFrame)
 export(getSSBFrame)
+export(getYieldVsFcurve)
 export(markBackground)
 export(newSheldonParams)
 export(pruneSpecies)
