--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -7,6 +7,7 @@ reference:
 - title: New plotting functions
   contents:
   - animateSpectra
+  - getYieldVsFcurve
   - displayFrames
   - getBiomassFrame
   - getSSBFrame
