We now import rintrojs package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,5 +22,6 @@ import(ggplot2)
 import(methods)
 import(mizer)
 import(plotly, except = last_plot)
+import(rintrojs)
 import(shiny)
 importFrom(stats,runif)
