Need to export some tuneParams helper functions so that extensions can use them.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,9 @@ export(rescaleAbundance)
 export(rescaleSystem)
 export(retuneBackground)
 export(tuneParams)
+export(tuneParams_add_to_logs)
+export(tuneParams_run_steady)
+export(tuneParams_update_species)
 export(updateInitialValues)
 import(assertthat)
 import(dplyr)
