--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,5 +46,6 @@ Collate:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Roxygen: list(markdown = TRUE)
 URL: https://github.com/sizespectrum/mizerExperimental
 BugReports: https://github.com/sizespectrum/mizerExperimental/issues
