--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,6 @@
 pandoc: 2.7.3
 pkgdown: 1.5.1.9000
-pkgdown_sha: 3b74d8860686ed6d63e536d7ec4971fbbde5faff
-articles:
-  single_species_size-spectrum_dynamics: single_species_size-spectrum_dynamics.html
-last_built: 2020-07-28T08:43Z
+pkgdown_sha: eae56f08694abebf93cdfc0dd8e9ede06d8c815f
+articles: []
+last_built: 2020-07-31T05:50Z
 
