New function `setCustomFunction()` to allow users to overwrite mizer functions.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Collate:
     animateSpectra.R
     compareParams.R
     constantEggRDI.R
+    customFunction.R
     displayFrames.R
     manipulateParams.R
     mizerExperimental-package.R
