--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(addSpecies)
 export(animateSpectra)
 export(compareParams)
 export(constantEggRDI)
+export(customFunction)
 export(displayFrames)
 export(getBiomassFrame)
 export(getSSBFrame)
