New function `projectToSteady()` to run dynamics until close to steady state. Closes #14

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Collate:
     manipulateParams.R
     mizerExperimental-package.R
     newSheldonParams.R
+    projectToSteady.R
     tuneParams.R
     tuneParams_controls.R
     tuneParams_tabs.R
