--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,17 +6,20 @@ export(compareParams)
 export(constantEggRDI)
 export(customFunction)
 export(displayFrames)
+export(distanceRDI)
 export(getBiomassFrame)
 export(getSSBFrame)
 export(getYieldVsFcurve)
 export(markBackground)
 export(newSheldonParams)
+export(projectToSteady)
 export(pruneSpecies)
 export(removeSpecies)
 export(renameSpecies)
 export(rescaleAbundance)
 export(rescaleSystem)
 export(retuneBackground)
+export(steady)
 export(tuneParams)
 export(tuneParams_add_to_logs)
 export(tuneParams_run_steady)
