Some improvements to `projectToSteady()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(compareParams)
 export(constantEggRDI)
 export(customFunction)
 export(displayFrames)
+export(distanceLogN)
 export(distanceRDI)
 export(getBiomassFrame)
 export(getSSBFrame)
