More expressive names for distance functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(compareParams)
 export(constantEggRDI)
 export(customFunction)
 export(displayFrames)
-export(distanceLogN)
-export(distanceRDI)
+export(distanceMaxRelRDI)
+export(distanceSSLogN)
 export(getBiomassFrame)
 export(getSSBFrame)
 export(getYieldVsFcurve)
