Temporarily adding functions that are so far only in the development version of mizer. Can be removed after the release of mizer 2.0.4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(displayFrames)
 export(distanceMaxRelRDI)
 export(distanceSSLogN)
 export(getBiomassFrame)
+export(getRates)
 export(getSSBFrame)
 export(getYieldVsFcurve)
 export(markBackground)
@@ -26,6 +27,9 @@ export(tuneParams_add_to_logs)
 export(tuneParams_run_steady)
 export(tuneParams_update_species)
 export(updateInitialValues)
+export(validGearParams)
+export(validParams)
+export(validSpeciesParams)
 import(assertthat)
 import(dplyr)
 import(ggplot2)
