Some improvement to calculation of yield curve, see #6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,10 @@ export(distanceMaxRelRDI)
 export(distanceSSLogN)
 export(getBiomassFrame)
 export(getSSBFrame)
-export(getYieldVsFcurve)
+export(getYieldVsF)
 export(markBackground)
 export(newSheldonParams)
+export(plotYieldVsF)
 export(projectToSteady)
 export(pruneSpecies)
 export(removeSpecies)
