--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,8 @@
-pandoc: 2.7.3
-pkgdown: 1.5.1.9000
-pkgdown_sha: eae56f08694abebf93cdfc0dd8e9ede06d8c815f
-articles: []
-last_built: 2020-07-31T05:50Z
+pandoc: 2.9.2.1
+pkgdown: 1.6.1
+pkgdown_sha: ~
+articles:
+  first_multispecies_model: first_multispecies_model.html
+  single_species_size-spectrum_dynamics: single_species_size-spectrum_dynamics.html
+last_built: 2021-03-06T13:48Z
 
