An improved `setBevertonHolt()` function that allows setting either `erepro` or `R_max` or `reproduction_level`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(renameSpecies)
 export(rescaleAbundance)
 export(rescaleSystem)
 export(retuneBackground)
+export(setBevertonHolt)
 export(tuneParams)
 export(tuneParams_add_to_logs)
 export(tuneParams_run_steady)
