--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,7 @@ Collate:
     tuneParams_tabs.R
     tuneParams_helpers.R
     getYieldVsFcurve.R
+    setBevertonHolt.R
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
