--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(tuneParams_add_to_logs)
 export(tuneParams_run_steady)
 export(tuneParams_update_species)
 export(updateInitialValues)
+export(validSim)
 import(assertthat)
 import(dplyr)
 import(ggplot2)
