--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(pruneSpecies)
 export(rescaleAbundance)
 export(rescaleSystem)
 export(retuneBackground)
+export(setBevertonHolt)
+export(steady)
 export(tuneParams)
 export(tuneParams_add_to_logs)
 export(tuneParams_run_steady)
