--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Suggests:
 Collate:
     manipulateParams.R
     mizerExperimental-package.R
+    plotBiomassVsSpecies.R
     tuneParams.R
     tuneParams_controls.R
     tuneParams_tabs.R
