New function `calibrateBiomass()` extracted from the code of `tuneParams()`.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,7 @@ Suggests:
     testthat (>= 2.1.0),
     vdiffr
 Collate:
+    calibrateBiomass.R
     manipulateParams.R
     mizerExperimental-package.R
     plotBiomassVsSpecies.R
