New functions `scaleDownBackground()` and `removeBackgroundSpecies()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ export(matchBiomasses)
 export(plotBiomassVsSpecies)
 export(plotYieldVsF)
 export(pruneSpecies)
+export(removeBackgroundSpecies)
 export(rescaleAbundance)
 export(rescaleSystem)
 export(retuneBackground)
+export(scaleDownBackground)
 export(setBevertonHolt)
 export(steady)
 export(tuneParams)
