--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(calibrateBiomass)
 export(getYieldVsF)
 export(markBackground)
 export(matchBiomasses)
+export(plotBiomassObservedVsModelFraction)
+export(plotBiomassObservedVsModelPearson)
 export(plotBiomassVsSpecies)
 export(plotYieldVsF)
 export(pruneSpecies)
