Add necessary imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,7 @@ export(calibrateBiomass)
 export(getYieldVsF)
 export(markBackground)
 export(matchBiomasses)
-export(plotBiomassObservedVsModelFraction)
-export(plotBiomassObservedVsModelPearson)
+export(plotBiomassObservedVsModel)
 export(plotBiomassVsSpecies)
 export(plotYieldVsF)
 export(pruneSpecies)
@@ -28,4 +27,6 @@ import(plotly, except = last_plot)
 import(rintrojs)
 import(shiny)
 import(shinyBS)
+importFrom(stats,cor.test)
 importFrom(stats,runif)
+importFrom(utils,data)
