Add `plotlyBiomassObservedVsModel()` a plotly version of `plotBiomassObservedVsModel()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(matchBiomasses)
 export(plotBiomassObservedVsModel)
 export(plotBiomassVsSpecies)
 export(plotYieldVsF)
+export(plotlyBiomassObservedVsModel)
 export(pruneSpecies)
 export(removeBackgroundSpecies)
 export(scaleAbundance)
