New `plotYieldVsSpecies()` very similar to `plotBiomassVsSpecies()` for use in `tuneParams()`.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Collate:
     mizerExperimental-package.R
     plotBiomassObservedVsModel.R
     plotBiomassVsSpecies.R
+    plotYieldVsSpecies.R
     tuneParams.R
     tuneParams_controls.R
     tuneParams_tabs.R
