Beginning to work on a simplified `tuneGrowth()` gadget, see #29 and #28

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,6 +49,7 @@ Collate:
     validSim.R
     steady.R
     setBevertonHolt.R
+    tuneParams_predation_simpleControl.R
 Encoding: UTF-8
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
