New biomass tab showing total biomass and biomass density, based on current spectra tab.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,7 @@ Collate:
     steady.R
     setBevertonHolt.R
     tuneParams_predation_simpleControl.R
+    tuneParams_biomassTab.R
 Encoding: UTF-8
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
