Now exporting `tuneGrowth()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(scaleDownBackground)
 export(scaleModel)
 export(setBevertonHolt)
 export(steady)
+export(tuneGrowth)
 export(tuneParams)
 export(updateInitialValues)
 export(validSim)
