--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,6 +56,7 @@ Collate:
     ratesTab.R
     reproTab.R
     resourceTab.R
+    test-helpers.R
     tuneParams_helpers.R
     getYieldVsFcurve.R
     validSim.R
