While this is requiring a development version of mizer, we need the Remotes: specification so that `install_github()` can find it.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ License: GPL-3
 Depends:
     R (>= 3.1),
     mizer (>= 2.2.1.9008)
+Remotes: 
+    github::sizespectrum/mizer
 Imports:
     assertthat,
     cubelyr,
