--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,18 @@ export(adjustBackgroundSpecies)
 export(getYieldVsF)
 export(markBackground)
 export(plotBiomassVsSpecies)
+export(plotDataFrame)
+export(plotDeath)
+export(plotEnergyBudget)
+export(plotResource)
+export(plotResourcePred)
 export(plotYieldVsF)
+export(plotYieldVsSize)
 export(plotYieldVsSpecies)
+export(plotlyDeath)
+export(plotlyEnergyBudget)
+export(plotlyResourcePred)
+export(plotlyYieldVsSize)
 export(pruneSpecies)
 export(removeBackgroundSpecies)
 export(scaleAbundance)
