--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,10 @@ Description: This mizer extension package collects contributions from the mizer
 License: GPL-3
 Depends:
     R (>= 3.1),
-    mizer (>= 2.3.0)
+    mizer (>= 2.3.0),
+    mizerMR (>= 0.0.3)
+Remotes:
+    github::sizespectrum/mizerMR
 Imports:
     assertthat,
     bslib,
