--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(adjustBackgroundSpecies)
 export(calibrateNumber)
 export(calibrateYield)
 export(distanceSSLogYield)
+export(getDiffParams)
 export(getMaxF)
 export(getYieldVsF)
 export(markBackground)
 export(matchNumbers)
+export(paramsCompar)
 export(plotBiomassVsSpecies)
 export(plotDataFrame)
 export(plotDeath)
@@ -40,5 +42,6 @@ import(plotly, except = last_plot)
 import(rintrojs)
 import(shiny)
 import(shinyBS)
+importFrom(rmarkdown,render)
 importFrom(stats,runif)
 importFrom(utils,globalVariables)
