--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,6 +71,7 @@ Collate:
     validSim.R
     plots.R
     paramsCompar.R
+    data.R
 Encoding: UTF-8
 RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
