--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ import(plotly, except = last_plot)
 import(rintrojs)
 import(shiny)
 import(shinyBS)
+importFrom(arsenal,comparedf)
 importFrom(rmarkdown,render)
 importFrom(stats,runif)
 importFrom(utils,globalVariables)
