Rename `plotResource()` to `plotResourceLevel()` and use it on resource tab.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(plotDataFrame)
 export(plotDeath)
 export(plotEnergyBudget)
 export(plotNumberVsSpecies)
-export(plotResource)
+export(plotResourceLevel)
 export(plotResourcePred)
 export(plotYieldVsF)
 export(plotYieldVsSize)
