Beginnings of an example tab that can be used as a well-documented base for new custom tabs. Needs to be expanded and get better documentation.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,6 +49,7 @@ Collate:
     reproductionControl.R
     resourceControl.R
     tuneParams_tabs.R
+    exampleTab.R
     abundanceTab.R
     biomassTab.R
     catchTab.R
