--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(removeBackgroundSpecies)
 export(scaleAbundance)
 export(scaleDownBackground)
 export(scaleModel)
+export(singleSpeciesSteady)
 export(tuneGrowth)
 export(tuneParams)
 export(updateInitialValues)
