--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -59,9 +59,16 @@ reference:
   - calibrateYield
   - getYieldVsF
   - scaleModel
+  - singleSpeciesSteady
 - title: New plotting functions
 - contents:
   - starts_with("plot")
+- title: Helper functions for `plotYieldVsF()`
+- contents:
+  - distanceSSLogYield
+  - getMaxF
+  - maxFthreshold
+  - yieldCalculator
 - title: Others
 - contents:
   - validSim
