--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,9 @@
-pandoc: 2.17.1.1
-pkgdown: 2.0.4
+pandoc: '2.18'
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   first_multispecies_model: first_multispecies_model.html
-last_built: 2022-06-13T12:01Z
+last_built: 2022-07-30T10:52Z
 urls:
   reference: https://sizespectrum.org/mizerExperimental/reference
   article: https://sizespectrum.org/mizerExperimental/articles
