Temporarily add the `steady()` code from the development version of mizer.
To be removed after the next release of mizer.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Collate:
     predationControl.R
     reproductionControl.R
     resourceControl.R
+    steady.R
     tuneParams_tabs.R
     exampleTab.R
     abundanceTab.R
