--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(scaleAbundance)
 export(scaleDownBackground)
 export(scaleModel)
 export(singleSpeciesSteady)
+export(steady)
 export(tuneGrowth)
 export(tuneParams)
 export(updateInitialValues)
