New plot function `plotSpectra2()` that plots the spectra  from to models on top of each other. Needs polishing.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,6 +45,7 @@ Collate:
     growthControl.R
     interactionControl.R
     otherControl.R
+    plotSpectra2.R
     predationControl.R
     reproductionControl.R
     resourceControl.R
