--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(plotEnergyBudget)
 export(plotNumberVsSpecies)
 export(plotResourceLevel)
 export(plotResourcePred)
+export(plotSpectra2)
 export(plotYieldVsF)
 export(plotYieldVsSize)
 export(plotYieldVsSpecies)
