The `match...()` functions now preserve reproduction level.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,9 @@ export(distanceSSLogYield)
 export(getMaxF)
 export(getYieldVsF)
 export(markBackground)
+export(matchBiomasses)
 export(matchNumbers)
+export(matchYields)
 export(plotBiomassVsSpecies)
 export(plotDataFrame)
 export(plotDeath)
