--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(plotNumberVsSpecies)
 export(plotResourceLevel)
 export(plotResourcePred)
 export(plotSpectra2)
+export(plotSpectraRelative)
 export(plotYieldVsF)
 export(plotYieldVsSize)
 export(plotYieldVsSpecies)
