--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(fishingControl)
 export(fishingControlUI)
 export(getDiffParams)
 export(getMaxF)
+export(getYieldCurve)
 export(getYieldVsF)
 export(growthControl)
 export(growthControlUI)
@@ -48,6 +49,7 @@ export(plotResourceLevel)
 export(plotResourcePred)
 export(plotSpectra2)
 export(plotSpectraRelative)
+export(plotYieldCurve)
 export(plotYieldVsF)
 export(plotYieldVsSize)
 export(plotYieldVsSpecies)
