Adding `plotBiomassRelative()` and `plotYieldRelative()` and their plotly versions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(numberTabUI)
 export(otherControl)
 export(otherControlUI)
 export(paramsCompar)
+export(plotBiomassRelative)
 export(plotBiomassVsSpecies)
 export(plotDataFrame)
 export(plotDeath)
@@ -50,12 +51,16 @@ export(plotResourcePred)
 export(plotSpectra2)
 export(plotSpectraRelative)
 export(plotYieldCurve)
+export(plotYieldRelative)
 export(plotYieldVsF)
 export(plotYieldVsSize)
 export(plotYieldVsSpecies)
+export(plotlyBiomassRelative)
 export(plotlyDeath)
 export(plotlyEnergyBudget)
 export(plotlyResourcePred)
+export(plotlySpectraRelative)
+export(plotlyYieldRelative)
 export(plotlyYieldVsSize)
 export(predationControl)
 export(predationControlUI)
