Initial version of `setResourceSemichemostat()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(resourceTabUI)
 export(scaleAbundance)
 export(scaleDownBackground)
 export(scaleModel)
+export(setResourceSemichemostat)
 export(simTab)
 export(simTabUI)
 export(singleSpeciesSteady)
