--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,6 +56,7 @@ Collate:
     reproductionControl.R
     resourceControl.R
     steady.R
+    setResourceSemichemostat.R
     tuneParams_tabs.R
     exampleTab.R
     abundanceTab.R
