--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(getMaxF)
 export(getYieldVsF)
 export(markBackground)
 export(matchNumbers)
+export(plotBiomassRelative)
 export(plotBiomassVsSpecies)
 export(plotDataFrame)
 export(plotDeath)
@@ -17,12 +18,17 @@ export(plotNumberVsSpecies)
 export(plotResourceLevel)
 export(plotResourcePred)
 export(plotSpectra2)
+export(plotSpectraRelative)
+export(plotYieldRelative)
 export(plotYieldVsF)
 export(plotYieldVsSize)
 export(plotYieldVsSpecies)
+export(plotlyBiomassRelative)
 export(plotlyDeath)
 export(plotlyEnergyBudget)
 export(plotlyResourcePred)
+export(plotlySpectraRelative)
+export(plotlyYieldRelative)
 export(plotlyYieldVsSize)
 export(pruneSpecies)
 export(removeBackgroundSpecies)
