--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mizerExperimental
 Type: Package
 Title: Extends the mizer package with experimental features
-Version: 2.3.1.0002
+Version: 2.3.1.0003
 Author: Various contributors
 Maintainer: Gustav Delius <gustav.delius@gmail.com>
 Description: This mizer extension package collects contributions from the mizer
@@ -10,13 +10,14 @@ Description: This mizer extension package collects contributions from the mizer
     core mizer package.
 License: GPL-3
 Depends:
-    R (>= 3.1),
-    mizer (>= 2.3.0)
+    mizer (>= 2.3.0),
+    R (>= 3.1)
 Imports:
     assertthat,
     bslib,
     dplyr,
     ggplot2,
+    lubridate,
     methods,
     plotly,
     rintrojs,
@@ -26,6 +27,7 @@ Imports:
     tibble,
     tidyr
 Suggests:
+    lifecycle,
     pkgdown,
     rmarkdown,
     roxygen2,
@@ -79,4 +81,3 @@ RoxygenNote: 7.2.1
 Roxygen: list(markdown = TRUE)
 URL: https://github.com/sizespectrum/mizerExperimental
 BugReports: https://github.com/sizespectrum/mizerExperimental/issues
-RdMacros: lifecycle
