Temporarily include new version of `plotDiet()`.
To be removed when mizer 2.4 gets released.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Collate:
     manipulateParams.R
     mizerExperimental-package.R
     plotBiomassVsSpecies.R
+    plotDiet.R
     plotYieldVsSpecies.R
     plotNumberVsSpecies.R
     plotRelative.R
