--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(plotBiomassRelative)
 export(plotBiomassVsSpecies)
 export(plotDataFrame)
 export(plotDeath)
+export(plotDiet)
 export(plotEnergyBudget)
 export(plotNumberVsSpecies)
 export(plotResourceLevel)
