New function `age_mat()` calculates age at maturity. `a_mat()` renamed to `age_mat_vB()`.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Suggests:
     testthat (>= 2.1.0),
     vdiffr
 Collate:
-    a_mat.R
+    age_mat.R
     alignResource.R
     manipulateParams.R
     mizerExperimental-package.R
