New function `matchGrowth()` that adjusts growth to achieve the maturity size at the given maturity age.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Suggests:
     vdiffr
 Collate:
     age_mat.R
+    matchGrowth.R
     alignResource.R
     manipulateParams.R
     mizerExperimental-package.R
