Update NAMESPACE and man pages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(distanceSSLogYield)
 export(getMaxF)
 export(getYieldVsF)
 export(markBackground)
+export(matchGrowth)
 export(matchNumbers)
 export(plotBiomassRelative)
 export(plotBiomassVsSpecies)
