`get_h_default()` now uses `age_mat`
Should be moved back to mizer for the next release.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,7 @@ Suggests:
 Collate:
     age_mat.R
     matchGrowth.R
+    get_h_default.R
     alignResource.R
     manipulateParams.R
     mizerExperimental-package.R
