--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(calibrateYield)
 export(distanceSSLogYield)
 export(getMaxF)
 export(getYieldVsF)
+export(get_h_default)
 export(markBackground)
 export(matchGrowth)
 export(matchNumbers)
