Add age at maturity to growth curve plots.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,7 @@ Collate:
     age_mat.R
     matchGrowth.R
     get_h_default.R
+    plotGrowthCurves.R
     alignResource.R
     manipulateParams.R
     mizerExperimental-package.R
