--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(plotDataFrame)
 export(plotDeath)
 export(plotDiet)
 export(plotEnergyBudget)
+export(plotGrowthCurves)
 export(plotNumberVsSpecies)
 export(plotResourceLevel)
 export(plotResourcePred)
