Keep a special version of plotDiet() in which one can change the scale of the x axis. This is used on the diet tab in tuneParams()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(markBackground)
 export(plotBiomassRelative)
 export(plotBiomassVsSpecies)
 export(plotDeath)
+export(plotDietX)
 export(plotEnergyBudget)
 export(plotNumberVsSpecies)
 export(plotResourceLevel)
