Updated Imports list in DESCRIPTION.
Thanks to Samik for alerting me to this.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,12 +17,12 @@ Imports:
     bslib,
     dplyr,
     ggplot2,
-    lubridate,
     methods,
     plotly,
     prompter,
     rintrojs,
     shiny,
+    shinyBS,
     shinyjs,
     tibble,
     tidyr
